--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,15 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node
+node_modules/
+dist/
+.env
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# React
+/frontend/node_modules/
+/frontend/build/
 
-# testing
-/coverage
+# IDE
+.vscode/
+*.log
 
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Docker
+docker-compose.override.yml
